# fip-version-plugin

./: README.md
.github/: dependabot.yml
.github/workflows/: code-quality.yml  package.yml
plugin/: .prettierrc  eslint.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
plugin/src/: metadata.ts  plugin.ts
plugin/src/components/: FIPVersionProjectAction.tsx  ProjectActionModal.tsx  SettingsComponent.tsx
plugin/src/components/fip-version-project-action/: FlashError.tsx  Loader.tsx  data.ts  requests.ts
plugin/src/data/: settings-data.ts  user-settings-data.ts
service/: Makefile  pyproject.toml  requirements.txt
service/src/fip_version_plugin_service/: app.py  logic.py  schemas.py
service/src/plugin_service/: app.py
