[project]
name = "plugin-service"
version = "1.0.0"
description = "Plugin Service for ..."
keywords = ["wizard", "plugin"]
license = "MIT"
authors = [
    { name = "...", email = "..." }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
]
requires-python = ">=3.13, <4"
dependencies = [
    "fastapi>=0.120,<1.0",
]

[dependency-groups]
dev = [
    "uvicorn",
    "ruff",
    "ty",
]

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"

[tool.ruff]
target-version = "py313"
line-length = 80
indent-width = 4
include = ["src/**/*.py"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",
    "CPY",
    "PGH003",
]
preview = true

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
